@@ -4,6 +4,8 @@
 * Yank raw or decoded message or element to primary clipboard with 'Y'
   or 'y', useful for applying patches.
 
+* Yank the Message-ID to the primary clipboard with C-y.
+
 == v0.6 / 2016-07-23
 
 * Use any editor (general XEmbed support in edit-message window): Emacs
